Fix Gap in Skills and Resume Section

--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,5 +1,5 @@
 .skills {
-    padding: 4rem 0;
+    padding-top: 4rem;
     /* background: var(--container-color); */
     background: transparent;
     border-radius: var(--border-radius);
@@ -115,8 +115,8 @@
 /* Responsive Design */
 @media screen and (max-width: 768px) {
     .skills {
-        margin: 1rem 0; /* Remove horizontal margin to prevent overflow */
-        padding: 1.5rem 0; /* Remove horizontal padding */
+        margin: 1rem;
+        padding: 1.5rem;
         margin-bottom: 0px;
     }
     
